# trikey_description

./: CMakeLists.txt  README.md  package.xml
config/: ddbot.rviz  ddbot.yaml  trikey.rviz
launch/: ddbot_rviz.launch  trikey_rviz.launch
meshes/: motors_base.STL
meshes/lidar_obstacles/: arc15.stl  arc30.stl  arc45.stl  arc5.stl  arc90.stl
rviz/: urdf.rviz  wheel_control_bringup.rviz
urdf/: SimplifiedBase.urdf  TrikeyBaseAssembly.gazebo.xacro  TrikeyBaseAssembly.urdf  TrikeyBaseAssembly.urdf.xacro  ddbot.urdf.xacro
urdf/ddbot/: ddbot.gazebo.xacro  ddbot.urdf.xacro
urdf/objects/: walls.urdf
urdf/old_urdf/: TrikeyBaseAssembly.urdf.xacro
urdf/urdf_gazebo/: robot.urdf.xacro
urdf/urdf_generator/: 8x750roller.part  8x750roller.stl  config.json  motors_base.part  motors_base.stl  robot.gazebo.xacro  robot.urdf  robot.urdf.xacro  simbot.urdf.xacro  wheel.part  wheel.stl
