<package format="2">
  <name>trikey_description</name>
  <version>1.1.0</version>
  <description>
    <p>URDF Description package for Trikey base assembly</p>
    <p>This package contains configuration data, 3D models and launch files
    for Trikey assembly robot</p>
  </description>
  <author>TODO</author>
  <maintainer email="dongho@utexas.edu" />

  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher</depend>
  <exec_depend>xacro</exec_depend>
  <export>
    <architecture_independent />
  </export>
</package>
